feat: implement requested api and improve stability